# CarbonLens

./: .env.example  .gitignore  LICENSE  README.md  fly.toml
.github/workflows/: ci.yml  waker.yml
backend/: .env.example  alembic.ini  main.py  pyproject.toml  seed.py
backend/api/: __init__.py  ai.py  auth.py  compliance.py  emissions.py  forecast.py  optimize.py  reports.py  router.py  suppliers.py  supply_chain.py
backend/core/: __init__.py  auth.py  config.py  db.py  emission_factors.csv  emission_factors.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_compliance_alerts.py
backend/models/: models.py  schemas.py
backend/services/: ai_service.py  alert_service.py  compliance_pdf_service.py  compliance_service.py  emission_service.py  optimizer_service.py  report_service.py
backend/tests/: __init__.py  conftest.py  test_api.py
backend/workers/: __init__.py  tasks.py
docker/: Dockerfile.backend
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AlertCard.tsx  ComplianceGauge.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx  MainLayout.tsx  SeverityBadge.tsx  StatCard.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  (+1 more)
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  Compliance.tsx  Dashboard.tsx  Emissions.tsx  Login.tsx  Onboarding.tsx  Reports.tsx  Suppliers.tsx  SupplyChain.tsx
frontend/src/store/: useAuthStore.ts
scripts/: demo_checklist.md  deploy.md  dev.py  get_groq_key.md  setup_supabase.md
