[tool.poetry]
name = "carbonlens-backend"
version = "0.1.0"
description = "FastAPI Backend for CarbonLens carbon emissions tracker and optimizer"
authors = ["Rishi sharma <stack-rishi@users.noreply.github.com>"]
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
supabase = "^2.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
python-dotenv = "^1.0.1"
anthropic = "^0.21.3"
groq = "^0.4.2"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
ortools = "^9.9.3963"
reportlab = "^4.1.0"
matplotlib = "^3.8.3"
structlog = "^24.1.0"
slowapi = "^0.1.9"
httpx = "^0.27.0"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
anyio = "^4.3.0"
aiosqlite = "^0.20.0"
ruff = "^0.3.2"
mypy = "^1.9.0"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501", "B008", "B904", "N806", "SIM105", "F821", "B006", "ARG001"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [".."]

